--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,13 @@
-<h1>PrintShop</h1>
-
-
 
 <div class="mainCont">
     
     <h1>HOME</h1>
 
-<p>Welcome this is the home page ..... more to come</p>  
+    <p>Welcome to the PrintShop. Below you can find a list of our most popular products!</p>  
+
+
+    <%=render 'layouts/popular'%>
+
 
 
 </div>
