--- a/app/views/layouts/_popular.html.erb
+++ b/app/views/layouts/_popular.html.erb
@@ -15,13 +15,15 @@
              <%= number_to_currency(item.price, :unit => "€") %>
           </div>
           <div class="links">
-            <% if session[:login] ==1 %>
+            <% if user_signed_in? %>
+            <% if current_user.admin %>
               <%= link_to 'Edit', edit_item_path(item) %>
               <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %>
             <%else%>
             
               <a href="/cart/<%= item.id %>">Add to Cart</a>
-            <%end%>  
+            <% end%>  
+            <% end %>
         </div>
         </td>
       </tr>
