--- a/app/views/static_pages/allusers.html.erb
+++ b/app/views/static_pages/allusers.html.erb
@@ -14,7 +14,7 @@
 <% @users.each do |user| %>
 
 
-    <div class="itemhols">
+    <div class="mainCont">
     
    <h1>User Id: <%= user.id %></h1>
    <h1>email: <%= user.email %></h1>
