--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -25,9 +25,14 @@
           <div class="links">
             <% if user_signed_in? %>
               <%= link_to 'Show',  item, :class => "w3-button w3-black w3-section", :role => "button" %>
-              <%= link_to 'Edit', edit_item_path(item),:class => "w3-button w3-black w3-section" %>
-              <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' },:class => "w3-button w3-black w3-section" %>
+              
+              
+              <% if current_user.admin %>
+              
+                <%= link_to 'Edit', edit_item_path(item),:class => "w3-button w3-black w3-section" %>
+                <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' },:class => "w3-button w3-black w3-section" %>
             
+              <% end %>
             
               <a href="/cart/<%= item.id %>"class = "w3-button w3-black w3-section">Add to Cart</a>
               <% else %>
