--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,7 +31,7 @@
 </p>
 
 
-<% if user_signed_in? %>
+<% if current_user.admin %>
 <%= link_to 'Edit', edit_item_path(@item),:class => "button" %>
 <% end %>
 
