--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -20,14 +20,19 @@
         <td><%= order.user_id %></td>
         <td><%= order.status %></td>
         <td><%= link_to 'Show', order %></td>
+        <% if current_user.admin %>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
 
 
 <br>
-
-<%= link_to 'New Order', new_order_path,:class => "w3-button w3-black w3-section" %>
+<% if user_signed_in? %>
+  <% if current_user.admin %>
+    <%= link_to 'New Order', new_order_path,:class => "w3-button w3-black w3-section" %>
+  <% end %>
+<% end %>
