commit from EC2

--- a/app/views/static_pages/allusers.html.erb
+++ b/app/views/static_pages/allusers.html.erb
@@ -1,4 +1,4 @@
-<h1>Heool here are all the users</h1>
+<h1>All Users</h1>
 
 
 
@@ -6,7 +6,7 @@
 
 <div class="mainCont">
     
-    <h1>All The People...... So Many People....</h1>
+    <h1>Registered Users</h1>
     
     
     
@@ -23,7 +23,7 @@
     <p><a href="/downgrade/<%= user.id %>" class="button">Make Not Admin</a></p>
     </div>
    
-<% end %>
+        <% end %>
     
     <% end %>
     
